# recon_bot

./: .gitignore  .gitmodules  README.md  frames_2025-05-09_01.24.59.gv
docs/: RECON_BOT_OVERVIEW_TH.md
microRos_bot/test/: ultra_sonic.cpp
recon_bot_aruco_pose_estimator/: CMakeLists.txt  package.xml
recon_bot_aruco_pose_estimator/config/: calibration_matrix.yaml  tags_36h11.yaml
recon_bot_aruco_pose_estimator/launch/: apriltag_ros.launch.py
recon_bot_aruco_pose_estimator/scripts/: apriltag_marker.py  aruco_detector.py  aruco_marker.py  cb_caribase.py  open_cv.py
recon_bot_bringup/: CMakeLists.txt  package.xml
recon_bot_bringup/config/: dynamixel_controllers.yaml  my_controllers.yaml  nav2_params.yaml  rplidar.rviz  slam_toolbox.yaml  twist_mux.yaml
recon_bot_bringup/launch/: launch_robot.launch.py  mapper_robot.launch.py  navigation.launch.py  robot_monitor.py  rplidar_two.launch.py  rsp.launch.py  view_robot.launch.py
recon_bot_commnunication/: CMakeLists.txt  package.xml
recon_bot_commnunication/scripts/: gpio_control.py  joy_pyserial.py  recon_bot_pyserial.py  test_gpio_control.py
recon_bot_description/: CMakeLists.txt  package.xml
recon_bot_description/Mobile_Base_Holder_1/: CMakeLists.txt  package.xml
recon_bot_description/Mobile_Base_Holder_6/: CMakeLists.txt  package.xml
recon_bot_description/config/: controllers.yaml  ekf.yaml  mecanum_controllers.yaml  properties.yaml
recon_bot_description/launch/: display.launch.py
recon_bot_description/meshes/: Pin_Head_F.STL  Pin_Head_L.STL  Pin_Head_L_visual.stl  Pin_Head_R.STL  Pin_Head_R_visual.stl  Roller_LF_1.STL  Roller_LF_2.STL  Roller_LF_3.STL  Roller_LF_4.STL  Roller_LF_5.STL  Roller_LF_6.STL  Roller_LF_7.STL  Roller_LF_8.STL  Roller_LR_1.STL  Roller_LR_2.STL  Roller_LR_4.STL  Roller_LR_5.STL  Roller_LR_6.STL  Roller_RF_3.STL  Roller_RF_6.STL  Roller_RF_7.STL  Roller_RF_8.STL  Roller_RR_3.STL  Roller_RR_7.STL  Roller_RR_8.STL
recon_bot_mecanum_control/: CMakeLists.txt  package.xml
recon_bot_mecanum_control/launch/: mecanum_control.launch.py  mecanum_joy_control.launch.py  mecanum_joy_control.py  mecanum_launch.py  square_drive.launch.py
recon_bot_mecanum_control/scripts/: MobiControl.py  a_joy_cmd_vel.py  a_motor_read.py  a_motor_read_write.py  a_motor_write.py  a_odometry_pub.py  a_square_drive_test.py  b_motor_read.py  b_motor_read_write.py  b_motor_write.py  base_joy.py  check_motor.py  dxl_address.py  dxl_address_2.py  mecanum_controller.py  mecanum_odometry.py  motor_test_node.py  recon_bot_dynamic_controller.py  recon_bot_joy_controller.py  test_drive.py  test_motor.py
recon_bot_mecanum_control/scripts/a_sdk/: a_sdk_group_bulk_read.py  a_sdk_group_bulk_write.py  a_sdk_group_sync_read.py  a_sdk_group_sync_write.py  a_sdk_packet_handler.py  a_sdk_protocol1_packet_handler.py  basic_movement.py  motor_start.py
recon_bot_mecanum_control/scripts/unuse_scripts/: a_motor_read.py  a_motor_read_write.py  b_motor_read_write.py  docking.py  dxl_address.py  mobility_node.py  motor_joint_publisher.py  read_motor.py  static_joint_publisher.py  test_motor.py
recon_bot_navigation/: CMakeLists.txt  package.xml
recon_bot_slam/: CMakeLists.txt  package.xml
recon_bot_test/: CMakeLists.txt  package.xml
(+79 files in other folders)
